.happypack/s--2125459364
/Users/dongfanai/Desktop/project/kr-admin/src/Containers/Permission/User/Createdialog/index.js: Unterminated string constant (95:29)
SyntaxError: /Users/dongfanai/Desktop/project/kr-admin/src/Containers/Permission/User/Createdialog/index.js: Unterminated string constant (95:29)
[0m [90m 93 | [39m					[33m/[39m[33m>[39m
 [90m 94 | [39m				[33m<[39m[33m/[39m[33mform[39m[33m>[39m
[31m[1m>[22m[39m[90m 95 | [39m				[33m<[39m[33mdiv[39m style[33m=[39m{{width[33m:[39m[32m'100%'[39m[32m'}}>[39m
 [90m    | [39m				                         [31m[1m^[22m[39m
 [90m 96 | [39m				[33m<[39m[33mdiv[39m  className[33m=[39m[32m'ui-btn-center'[39m[33m>[39m[33m<[39m[33mButton[39m  label[33m=[39m[32m"确定"[39m type[33m=[39m[32m"button"[39m   onTouchTap[33m=[39m{[36mthis[39m[33m.[39monSubmit} height[33m=[39m{[35m34[39m} width[33m=[39m{[35m90[39m}[33m/[39m[33m>[39m[33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m 97 | [39m				[33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m 98 | [39m			[33m<[39m[33m/[39m[33mdiv[39m[33m>[39m[0m
    at Parser.pp$5.raise (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:4246:13)
    at Parser.readString (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1217:33)
    at Parser.getTokenFromCode (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1025:21)
    at Parser.readToken (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:694:19)
    at Parser.<anonymous> (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6435:20)
    at Parser.readToken (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5370:22)
    at Parser.nextToken (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:684:19)
    at Parser.next (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:609:10)
    at Parser.pp$3.parseLiteral (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3616:8)
    at Parser.pp$3.parseExprAtom (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3531:19)
    at Parser.parseExprAtom (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6402:22)
    at Parser.pp$3.parseExprSubscripts (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3331:19)
    at Parser.pp$3.parseMaybeUnary (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3311:19)
    at Parser.pp$3.parseExprOps (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3241:19)
    at Parser.pp$3.parseMaybeConditional (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3218:19)
    at Parser.pp$3.parseMaybeAssign (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3181:19)
    at Parser.parseMaybeAssign (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5694:20)
    at Parser.pp$3.parseObjPropValue (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3896:99)
    at Parser.parseObjPropValue (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5531:13)
    at Parser.pp$3.parseObj (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3865:10)
    at Parser.pp$3.parseExprAtom (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3555:19)
    at Parser.parseExprAtom (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6402:22)